--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
         <button class="animated-button"><img src="img/spock.png" class="but" id="btn-spock"></button>
     </div>
 
-    <script src="/jjs/pulga.js"></script>
+    <script src="jjs/pulga.js"></script>
 </body>
 </html>
