--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
 </head>
 <body>
+
+    <script src="jjs/pulga.js"></script>
+    
     <section>
         <button id="rules" class="lato-regular">Reglas</button>
 
