--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <h2 class="lato-regular">Reglas del juego</h2>
-                <img src="/img/rules.png" id="Ki">
+                <img src="img/rules.png" id="Ki">
             </div>
         </div>
     </section>
